fixed picture so it does not look stretched

--- a/Portfolio/assets/css/main.css
+++ b/Portfolio/assets/css/main.css
@@ -3405,10 +3405,10 @@ input, select, textarea {
 				cursor: default;
 				display: inline-block;
 				font-size: 2em;
-				height: 4.5em;
+				/* height: 4.5em; */
 				line-height: 2.25em;
 				text-align: center;
-				width: 3.75em;
+				width: 4.75em;
 			}
 
 		#banner h2 {
